src/core-crm/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>This object will capture expenses that QUT have incurred in relation to an Engagement, Opportunity or Opportunity Outcome. The expense records are manually created and updated by business users.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>