src/core-crm/objects/Expense__c/fields/Date_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Incurred__c</fullName>
    <description>The date the expense was incurred.</description>
    <label>Date Incurred</label>
    <type>Date</type>
</CustomField>