src/core-crm/objects/Expense__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <description>The amount of the expense.</description>
    <label>Expense Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>