src/core-crm/objects/Expense__c/fields/Expense_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approval_Status__c</fullName>
    <description>The status of the expense approval.</description>
    <label>Expense Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>