src/core-crm/objects/Expense__c/fields/Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Expense_Description__c</fullName>
    <description>Description of the expense.</description>
    <label>Expense Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>