src/core-crm/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <description>The type of expense.</description>
    <label>Expense Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airfare</fullName>
            </value>
            <value>
                <fullName>Transport (exc. Airfare)</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Stationery</fullName>
            </value>
            <value>
                <fullName>Workshop Facilitation</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>