src/core-crm/objects/Expense__c/fields/Invoice_Raised__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Raised__c</fullName>
    <description>Indicates whether an invoice relating to the expense has been raised in the QUT Finance system.</description>
    <label>Invoice Raised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>