src/core-crm/objects/Expense__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Opportunity Outcome.</description>
    <label>Opportunity Outcome</label>
    <referenceTo>Opportunity_Outcome__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>